src/tests/routes/crates/snapshots/crates_io__tests__routes__crates__reverse_dependencies__reverse_dependencies_includes_published_by_user_when_present-2.snap
---
source: src/tests/routes/crates/reverse_dependencies.rs
expression: response.json()
---
{
  "dependencies": [
    {
      "crate_id": "c1",
      "default_features": false,
      "downloads": 0,
      "features": [],
      "id": 1,
      "kind": "normal",
      "optional": false,
      "req": ">= 0",
      "target": null,
      "version_id": 2
    },
    {
      "crate_id": "c1",
      "default_features": false,
      "downloads": 0,
      "features": [],
      "id": 2,
      "kind": "normal",
      "optional": false,
      "req": ">= 0",
      "target": null,
      "version_id": 3
    }
  ],
  "meta": {
    "total": 2
  },
  "versions": [
    {
      "audit_actions": [],
      "bin_names": null,
      "checksum": "                                                                ",
      "crate": "c3",
      "crate_size": 0,
      "created_at": "[datetime]",
      "description": null,
      "dl_path": "/api/v1/crates/c3/3.0.0/download",
      "documentation": null,
      "downloads": 0,
      "edition": null,
      "features": {},
      "has_lib": null,
      "homepage": null,
      "id": 3,
      "lib_links": null,
      "license": null,
      "links": {
        "authors": "/api/v1/crates/c3/3.0.0/authors",
        "dependencies": "/api/v1/crates/c3/3.0.0/dependencies",
        "version_downloads": "/api/v1/crates/c3/3.0.0/downloads"
      },
      "num": "3.0.0",
      "published_by": {
        "avatar": null,
        "id": 1,
        "login": "foo",
        "name": null,
        "url": "https://github.com/foo"
      },
      "readme_path": "/api/v1/crates/c3/3.0.0/readme",
      "repository": null,
      "rust_version": null,
      "trustpub_data": null,
      "updated_at": "[datetime]",
      "yank_message": null,
      "yanked": false
    },
    {
      "audit_actions": [],
      "bin_names": null,
      "checksum": "                                                                ",
      "crate": "c2",
      "crate_size": 0,
      "created_at": "[datetime]",
      "description": null,
      "dl_path": "/api/v1/crates/c2/2.0.0/download",
      "documentation": null,
      "downloads": 0,
      "edition": null,
      "features": {},
      "has_lib": null,
      "homepage": null,
      "id": 2,
      "lib_links": null,
      "license": null,
      "links": {
        "authors": "/api/v1/crates/c2/2.0.0/authors",
        "dependencies": "/api/v1/crates/c2/2.0.0/dependencies",
        "version_downloads": "/api/v1/crates/c2/2.0.0/downloads"
      },
      "num": "2.0.0",
      "published_by": null,
      "readme_path": "/api/v1/crates/c2/2.0.0/readme",
      "repository": null,
      "rust_version": null,
      "trustpub_data": null,
      "updated_at": "[datetime]",
      "yank_message": null,
      "yanked": false
    }
  ]
}
