src/tests/routes/crates/snapshots/crates_io__tests__routes__crates__reverse_dependencies__reverse_dependencies_when_old_version_depended_but_new_doesnt.snap
---
source: src/tests/routes/crates/reverse_dependencies.rs
expression: response.json()
snapshot_kind: text
---
{
  "dependencies": [],
  "meta": {
    "total": 0
  },
  "versions": []
}
